--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ section.veiculos-destaque .container{
 .line-titulo{
 	position: relative;
 	text-align: center;
-	max-width: 800px;
+	max-width: 1000px;
 	margin: 0 auto;
 }
 
@@ -163,7 +163,15 @@ section.veiculos-destaque .container{
 	top: 20px;
 }
 
-section.veiculos-destaque .line-titulo > h2{
+.ln1{
+	position: relative;
+	height: 2px;
+	background: black;
+	width: 100%;
+	top: 20px;
+}
+
+.line-titulo > h2{
 	position: relative;
 	text-align: center;
 	font-size: 24px;
@@ -302,6 +310,372 @@ section.veiculos-destaque .line-titulo > h2{
 }
 
 
+section.contato{
+	padding: 80px 0;
+}
+
+
+section.contato form{
+	max-width: 600px;
+	margin: 30px auto;
+}
+
+section.contato .input-wraper{
+	float: left;
+	padding: 10px;
+	margin-top: 7px;
+}
+
+section.contato input[type=text]{
+	width: 100%;
+	border: 1px solid #ccc;
+	height: 60px;
+	line-height: 40px;
+	padding-left: 15px;
+	font-size: 16px;
+}
+
+section.contato textarea{
+	width: 100%;
+	border: 1px solid #ccc;
+	height: 140px;
+	padding: 8px;
+	resize: none;
+	font-size: 16px;
+}
+
+section.contato .input-wraper:nth-of-type(5){
+	text-align: center;
+}
+
+section.contato input[type=submit]{
+	border: 0;
+	cursor: pointer;
+	display: inline-block;
+}
+
+.w100{
+	width: 100%;
+}
+
+.w50{
+	width: 50%;
+}
+
+
+footer{
+	padding: 40px 2%;
+	background: #252525;
+	margin-top: 20px;
+}
+
+footer nav{
+	float: left;
+}
+
+footer nav ul{
+	list-style-type: none;
+}
+
+footer nav ul li{
+	float: left;
+	padding: 0 35px;
+	font-size: 19px;
+}
+
+footer nav ul a{
+	text-decoration: none;
+	color: white;
+}
+
+footer p{
+	float: right;
+	color: white;
+	font-style: italic;
+	font-size: 19px;
+}
+
+
+section.venda{
+	min-height: 90%;
+	padding: 90px 0;
+}
+
+
+.sidebar{
+	float: left;
+	width: 30%;
+	padding: 10px;
+}
+
+.search1{
+	width: 90%;
+}
+
+.search1 .barra-preco{
+	width: 100%;
+	height: 20px;
+	background: white;
+	margin-top: 20px;
+	border-radius: 20px;
+	border: 1px solid #ccc;
+	position: relative;
+}
+
+.barra-preco-fill{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 30%;
+	background: rgb(210,210,210);
+	height: 20px;
+	border-radius:20px;
+	background: linear-gradient(to bottom,rgb(255,255,255),rgb(200,200,200));
+}
+
+.pointer-barra{
+	width: 26px;
+	height: 26px;
+	border-radius: 8px;
+	background: linear-gradient(to bottom,rgb(255,255,255),rgb(180,180,180));
+	border: 1px solid black;
+	position: absolute;
+	top: -3px;
+	left: calc(30% - 13px);
+}
+
+.valor-pesquisa{
+	margin-top: 8px;
+}
+
+.valor-pesquisa p{
+	color: black;
+	font-size: 15px;
+}
+
+.valor-pesquisa p:nth-of-type(1){
+	float: left;
+}
+
+.valor-pesquisa p:nth-of-type(2){
+	float: right;
+}
+
+.search2{
+	margin-top: 40px;
+}
+
+.search2 h2{
+	font-size: 24px;
+	color: black;
+	font-weight: normal;
+}
+
+
+.form-vendas-wraper{
+	margin-top: 10px;
+}
+
+.form-vendas-wraper input[type=checkbox]{
+	display: none;
+}
+
+.form-vendas-wraper label{
+	width: 20px;
+	height: 20px;
+	display: inline-block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	cursor: pointer;
+	position: relative;
+}
+
+.form-vendas-wraper input[type=checkbox]:checked + label > .circle{
+	display: block;
+}
+
+.form-vendas-wraper .circle{
+	width: 8px;
+	height: 8px;
+	border-radius: 4px;
+	background: black;
+	position: absolute;
+	left: 5px;
+	top: 5px;
+	display: none;
+}
+
+.vitrine-venda{
+	float: left;
+	width: 70%;
+}
+
+.vitrine-venda .vitrine-destaque{
+	margin-top: 20px;
+}
+
+.form-vendas-wraper span{
+	display: inline-block;
+	vertical-align: top;
+	padding: 0 10px;
+}
+
+section.venda-single .container{
+	padding: 40px 0;
+	max-width: 1000px;
+	text-align: center;
+}
+
+.info-veiculo{
+	display: inline-block;
+	width: 60%;
+	text-align: left;
+}
+
+.descricao-veiculo{
+	display: inline-block;
+	vertical-align: top;
+	text-align: left;
+	padding: 20px 10px;
+}
+
+.foto-destaque{
+	width: 100%;
+	padding-top: 70%;
+	background-position: center;
+	background-size: contain;
+	background-repeat: no-repeat;
+}
+
+section.venda-single{
+	padding: 80px 2% 0 2%;
+}
+
+.descricao-veiculo p{
+	max-width: 360px;
+	margin-top: 25px;
+}
+
+.descricao-veiculo a{
+	margin-top: 25px;
+}
+
+.nav-galeria-parent{
+	width: 100%;
+	padding: 30px;
+	position: relative;
+}
+
+.nav-galeria{
+	width: 100%;
+	overflow: hidden;
+}
+
+.nav-galeria-wraper{
+	width: 200%;
+}
+
+.mini-img{
+	background-position: center;
+	background-size: cover;
+	width: 100%;
+	padding-top: 70%;
+	cursor: pointer;
+}
+
+.mini-img-wraper{
+	float: left;
+	width: calc(33.3% * (100 / 200));
+	padding: 9px;
+}
+
+.arrow-left-nav{
+	background-image: url('../imagens/arrow-left.png');
+	background-size: 100% 100%;
+	width: 22px;
+	height: 22px;
+	position: absolute;
+	left: 8px;
+	top: 50%;
+	transform: translateY(-50%);
+	cursor: pointer;
+}
+
+.arrow-right-nav{
+	background-image: url('../imagens/arrow-right.png');
+	background-size: 100% 100%;
+	width: 22px;
+	height: 22px;
+	position: absolute;
+	right: 8px;
+	top: 50%;
+	transform: translateY(-50%);
+	cursor: pointer;
+}
+
+.info-bread{
+	text-align: center;
+}
+
+.info-bread a{
+	text-decoration: none;
+}
+
+.info-bread span{
+	padding: 0 30px;
+}
+
+.info-bread a:last-child{
+	color: red;
+}
+
+
+section.sobre{
+	min-height: 90%;
+	padding: 60px 2% 20px 2%;
+}
+
+section.sobre .container{
+	max-width: 840px;
+	margin-top: 30px;
+}
+
+section.sobre .img-destaque-sobre{
+	width: 100%;
+	padding-top: 60%;
+	background-color: rgb(220,220,220);
+}
+
+section.sobre .descricao-autor{
+	margin-top: 20px;
+}
+
+section.sobre .descricao-autor h2{
+	font-size: 24px;
+}
+
+section.sobre .descricao-autor p{
+	font-size: 16px;
+	margin-top: 10px;
+}
+
+.descricao-autor2{
+	margin-top: 20px;
+}
+
+.img-small{
+	width: 30%;
+	padding-top: 30%;
+	background-color: rgb(220,220,220);
+	float: left;
+}
+
+.descricao-autor2 p{
+	float: left;
+	width: 70%;
+	padding: 15px;
+	line-height: 34px;
+}
 
 @media screen and (max-width: 580px){
 	.text-banner{
@@ -328,6 +702,17 @@ section.veiculos-destaque .line-titulo > h2{
 	.vitrine-destaque a{
 		display: inline-block;
 	}
+
+	.img-small{
+		width: 100%;
+		padding-top: 100%;
+	}
+
+	.descricao-autor2 p{
+		width: 100%;
+		padding: 20px 0;
+		font-size: 16px;
+	}
 }
 
 @media screen and (max-width: 720px){
@@ -347,7 +732,40 @@ section.veiculos-destaque .line-titulo > h2{
 		max-height: 800px;
 	}
 
+	.w50{
+		width: 100%;
+	}
+
+	footer nav{
+		display: none;
+	}
+
+	footer{
+		text-align: center;
+	}
+
+	footer p{
+		float: none;
+	}
 	
+	.info-veiculo{
+		width: 100%;
+	}
+
+	.descricao-veiculo p{
+		max-width: none;
+	}
+
+	.descricao-veiculo{
+		text-align: center;
+		width: 100%;
+	}
+
+	.descricao-veiculo a{
+		display: inline-block;
+	}
+
+
 }
 
 @media screen and (max-width: 850px){
@@ -363,6 +781,26 @@ section.veiculos-destaque .line-titulo > h2{
 	}
 	.half1,.half2{
 		width: 100%;
+	}
+
+	.sidebar{
+		width: 100%;
+		text-align: center;
+	}
+
+	.search1{
+		display: inline-block;
+	}
+
+	.search2{
+		display: inline-block;
+		text-align: left;
+	}
+
+	.vitrine-venda{
+		float: left;
+		width: 100%;
+		text-align: center;
 	}
 
 }
